@@ -341,14 +341,8 @@
 
 1424 2017- 3-31 ofaPreferences: an object should be managed as ofoCounters
 
-1425 2017- 3-31 ReconciliationPage: expand hierarchy action should only
-                be enabled when there is one hierarchy
-
 1427 2017- 3-31 SettlementPage: action should be labedl 'View entry properties'
                 instead of 'View/edit...'
-
-1428 2017- 3-31 ReconciliationPage: have an action 'View entry properties'
-                on entry lines
 
 1430 2017- 3-31 ReconciliationPage: display reconciliation group would be
                 useful when searching for other lines of the same group that
@@ -978,8 +972,17 @@
                 + let ofoCounter class get itself via getter
      2017- 3-31 done
 
+1425 2017- 3-31 ReconciliationPage: expand hierarchy action should only
+                be enabled when there is one hierarchy
+     2017- 4- 4 doing so will also disable the Ctrl+Expand which expand all
+                -> cancelled
+
 1426 2017- 3-31 EntryProperties: align ope and entry numbers on amount entry
      2017- 4- 3 done
+
+1428 2017- 3-31 ReconciliationPage: have an action 'View entry properties'
+                on entry lines
+     2017- 4- 4 done
 
 1429 2017- 3-31 EntryPage: have a 'display settlement group' same than
                 'display reconciliation group'
