@@ -40,7 +40,8 @@
    - Printings: have a plugin which can override ofaIRenderable interface (todo #1196).
    - Reconciliation group: display more columns (todo #1433).
    - Reconciliation group: let display entries and BAT files (todo #1434).
-   - Reconciliation page auto-updates when an external identifier changes (todo #1407).
+   - Reconciliation page: auto-updates when an external identifier changes (todo #1407).
+   - Reconciliation page: have all entry/batlines related actions (todo #1428).
    - Reconciliation render take into account the last available BAT at date (todo #1420).
    - Recurrent operations validation: have a visual display of the status (todo #1369).
    - Restore assistant: allow admin credentials to be saved (todo #1416).
